FullQa New/src/objects/Dynamic_Button__c.object
<CustomObject>
    <description>Contains the logic for showing and hiding dynamic buttons.</description>
    <fields>
        <fullName>Button_Name__c</fullName>
        <inlineHelpText>This is the API name of the button that will be display if the value on the record equals the value defined in this rule. Make sure name includes the underscores.</inlineHelpText>
        <label>Button Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Id__c</fullName>
        <inlineHelpText>The 15 character ID of the field that will control visibility of a detail page button. For standard fields you will need to use a tool like Firebug to inspect the page layout and identify the layout Id for  the given field. Example,Account Name is &apos;acc2&apos;.</inlineHelpText>
        <label>Field Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <inlineHelpText>When the field with the designated Field Id equals this value, show the button defined in the Button Name field.</inlineHelpText>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Prefix__c</fullName>
        <inlineHelpText>This is the 3 letter/number salesforce.com object prefix. For example, on an Account this is 001. You can determine this prefix by looking at the first 3 letters/numbers of a record Id.</inlineHelpText>
        <label>Object Prefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Dynamic Button</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dynamic Button Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dynamic Buttons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>